bins/havenc/tests/cases/fail/test_enum_unknown_variant.hv
//@ error: Undefined variable 'E::Nope'
enum E { A, B }

@export
proc main() i32 {
    let x: E = E::Nope;
    return 0;
}
